--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     },
     "dependencies": {
         "bootstrap": "5.3.2",
+        "puppeteer": "^22.10.0",
         "vite-plugin-static-copy": "^0.13.1"
     }
 }
