--- a/composer.json
+++ b/composer.json
@@ -13,12 +13,14 @@
         "guzzlehttp/guzzle": "^7.2",
         "jenssegers/agent": "^2.6",
         "laravel/framework": "^10.0",
+        "laravel/pulse": "^1.2",
         "laravel/sanctum": "^3.2",
         "laravel/tinker": "^2.8",
         "laravel/ui": "^4.2",
-        "laravelcollective/html": "^6.4",
         "maatwebsite/excel": "^3.1",
+        "predis/predis": "^2.2",
         "rap2hpoutre/laravel-log-viewer": "^2.4",
+        "spatie/laravel-html": "^3.9",
         "spatie/laravel-permission": "^6.7",
         "yajra/laravel-datatables": "10.0"
     },
